<resources>
    <!--앱의 이름입니다. -->
    <string name="app_name">Realtime</string>
    <!-- MainActivity text -->
    <string name="add_table">테이블 추가하기</string>
    <!-- ProductActivity text -->
    <string name="add_product">상품 등록하기</string>
    <!-- AddTableActivity text -->
    <string name="delete_table">삭제</string>
    <string name="title">Table</string>
    <string name="hint_title">Table 이름을 입력해주세요.</string>
    <string name="completion">완료</string>
    <!-- AddProductActivity text -->
    <string name="delete_product">삭제</string>
    <string name="title_product1">이름</string>
    <string name="title_product2">가격</string>
    <string name="hint_title_product1">상품 이름을 입력해주세요.</string>
    <string name="hint_title_product2">상품 가격을 입력해주세요.</string>
    <string name="completion_product">등록</string>
</resources>